--- a/pages/trilogia.html
+++ b/pages/trilogia.html
@@ -9,32 +9,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./trilogia.html">La
-                            trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
-                </ul>
+    <header>
+        <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./trilogia.html">La
+                                trilogía</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <main class="trilogia_main">
         <div class="trilogia_div">
@@ -51,14 +53,17 @@
                 <img src="../resources/tapa_libro_2.png" class="card-img-top" alt="Tapa libro 2">
                 <div class="card-body">
                     <h5 class="card-title">Libro 2</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, ut dolorem laborum veniam corporis illo voluptatum natus reprehenderit adipisci sapiente, error, magnam nostrum neque.</p>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet, ut dolorem
+                        laborum veniam corporis illo voluptatum natus reprehenderit adipisci sapiente, error, magnam
+                        nostrum neque.</p>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../resources/tapa_libro_3.png" class="card-img-top" alt="Tapa libro 3">
                 <div class="card-body">
                     <h5 class="card-title">Libro 3</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, odit suscipit nihil beatae voluptatum assumenda vero tempora autem.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, odit suscipit
+                        nihil beatae voluptatum assumenda vero tempora autem.</p>
                 </div>
             </div>
             <!-- <div class="card_libros">
