Estructura SCSS 3 (final)

--- a/pages/autor.html
+++ b/pages/autor.html
@@ -52,9 +52,7 @@
                     amet unde adipisci cumque aut inventore reprehenderit harum dolorum, est rerum eum ducimus et
                     dignissimos tenetur? Eveniet optio eaque dolor saepe. Itaque harum aperiam in perferendis sapiente
                     veniam corrupti ex vitae exercitationem, odit ab quaerat nemo soluta quos minus doloremque placeat
-                    animi velit debitis voluptas eligendi dolorum nulla non? Quis quae delectus nobis minima
-                    reprehenderit odit. Dolorum ratione porro, excepturi vitae ad sequi ab, ipsum veritatis rerum, animi
-                    facere quia iste maxime?</p>
+                    animi velit debitis.</p>
             </div>
         </div>
     </main>
