--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -13,31 +13,32 @@
 </head>
 
 <body>
-    <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page"
-                            href="./eventos.html">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
-                </ul>
+    <header>
+        <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="./eventos.html">Eventos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
-    <main class="general_main">
+        </nav>
+    </header>
+    <main class="eventos_main">
         <h2>Próximos eventos</h2>
-        <section class="eventos-proximos_section">
+        <section class="eventos-prox">
             <div class="eventos_card">
                 <h3>Evento 1</h3>
                 <p>Martes 23 abril</p>
@@ -64,9 +65,6 @@
                 <p class="subinfo">20:00 hs.</p>
             </div>
         </section>
-        <div>
-
-        </div>
     </main>
 
     <footer>
