--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,29 +13,30 @@
 </head>
 
 <body>
-    <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page"
-                            href="./contacto.html">Contacto</a></li>
-                </ul>
+    <header>
+        <!-- NAVBAR https://getbootstrap.com/docs/5.3/components/navbar/ -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">PARADIGMAS PERDIDOS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./autor.html">El autor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./trilogia.html">La trilogía</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./eventos.html">Eventos</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
-    <main class="general_main">
+        </nav>
+    </header>
+    <main>
         <div class="contacto_body">
             <div>
                 <h2>Puntos de venta</h2>
@@ -56,6 +57,7 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <button>Enviar</button>
             </div>
         </div>
     </main>
