--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -38,7 +40,7 @@
     </header>
 
     <main class="home_main">
-        <div>
+        <div class="animate__animated animate__fadeInUp">
             <h1>Frase marketinera</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, corrupti, autem.</p>
             <button class="home_button">Comprar ahora</button>
