--- a/pages/trilogia.html
+++ b/pages/trilogia.html
@@ -41,7 +41,7 @@
     <main class="trilogia_main">
         <div class="trilogia_div">
             <!-- Cards Bootstrap -->
-            <div class="card" style="width: 18rem;">
+            <div class="card tapa_anima1" style="width: 18rem;">
                 <img src="../resources/tapa_libro_1.png" class="card-img-top" alt="Tapa libro 1">
                 <div class="card-body">
                     <h5 class="card-title">Libro 1</h5>
@@ -49,7 +49,7 @@
                         perspiciatis architecto nam expedita neque laborum nobis aperiam. Labore, nemo!</p>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card tapa_anima2" style="width: 18rem;">
                 <img src="../resources/tapa_libro_2.png" class="card-img-top" alt="Tapa libro 2">
                 <div class="card-body">
                     <h5 class="card-title">Libro 2</h5>
@@ -58,7 +58,7 @@
                         nostrum neque.</p>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card tapa_anima3" style="width: 18rem;">
                 <img src="../resources/tapa_libro_3.png" class="card-img-top" alt="Tapa libro 3">
                 <div class="card-body">
                     <h5 class="card-title">Libro 3</h5>
