--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description" content="Rodolfo Salgado presenta Paradigmas Perdidos, una trilogía poco común, donde la ciencia ficción y la poesía se fusionan. El tercer corpúsculo, es el primer libro de la trilogía y ya está a la venta en todo el país.">
+    <meta name="keywords" content="libro, ciencia ficción, poesía, trilogía, Rodolfo Salgado, Paradigmas Perdidos">
     <title>Paradigmas Perdidos</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./resources/favicon.ico">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
