--- a/pages/autor.html
+++ b/pages/autor.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autor</title>
+    <!-- SEO -->
+    <meta name="description" content="Rodolfo Salgado, autor de la trilogía Paradigmas Perdidos, nació en 1955, en Quilmes, Provincia de Buenos Aires, Argentina.">
+    <meta name="keywords" content="libro, ciencia ficción, Rodolfo Salgado, trilogía, Paradigmas Perdidos">
+    <title>Autor | Paradigmas Perdidos</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../resources/favicon.ico">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
