--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <!-- SEO -->
+    <meta name="description" content="Contactate para adquirir el nuevo libro de Rodolfo Salgado, El tercer corpúsculo | Paradigmas Perdidos. Envíos a todo el país.">
+    <meta name="keywords" content="libro, ciencia ficción, Rodolfo Salgado, envíos a todo el país, El tercer corpúsculo | Paradigmas Perdidos">
+    <title>Contacto | Paradigmas Perdidos</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../resources/favicon.ico">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
