--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos</title>
+    <!-- SEO -->
+    <meta name="description" content="Rodolfo Salgado presentó el primer libro de la trilogía en la Feria del Libro (2023), Encuentro literario en General Roca (2023) y en Editorial Dunken (2023).">
+    <meta name="keywords" content="libro, ciencia ficción, trilogía, Rodolfo Salgado, El tercer corpúsculo | Paradigmas Perdidos, eventos, Feria del Libro (2023), Encuentro Literario - General Roca (2023), Editorial Dunken (2023)">
+    <title>Eventos | Paradigmas Perdidos</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../resources/favicon.ico">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
