--- a/pages/trilogia.html
+++ b/pages/trilogia.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trilogía</title>
+    <!-- SEO -->
+    <meta name="description"
+        content="Los títulos de la trilogía Paradigmas Perdidos escrita por Rodolfo Salgado son: El tercer corpúsculo, Nombre libro 2, Nombre libro 3.">
+    <meta name="keywords"
+        content="libros, ciencia ficción, poesía, trilogía, Rodolfo Salgado, Paradigmas Perdidos, El tercer corpúsculo, Nombre libro 2, Nombre libro 3">
+    <title>Trilogía | Paradigmas Perdidos</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="../resources/favicon.ico">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -66,13 +73,6 @@
                         nihil beatae voluptatum assumenda vero tempora autem.</p>
                 </div>
             </div>
-            <!-- <div class="card_libros">
-                <img src="../resources/tapa_libro_1.png" alt="libro 1">
-                <div>
-                    <h2>Libro 1</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique totam vitae explicabo laboriosam nesciunt nisi aliquid quisquam sunt incidunt a distinctio possimus, labore deleniti consequatur. Dolores aliquam facere incidunt reiciendis?</p>
-                </div>
-            </div> -->
         </div>
     </main>
 
